ont-api: refactoring (issue #33) -- replace redundant old-school constructions with java11 analogues (remove Iter#toUnmodifiable*, invite {Map/List/Set}#of, etc)